# ml-nlp-ex-1

./:  pyproject.toml  .evn  .pre-commit-config.yaml  README.md  backend.py  docker-compose.yml  interact.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.py  run_backend.py  run_frontend.py
.github/workflows/: ci.yml  ruff.sh
app/: __init__.py  accessors.py  chat.py  config.py  endpoints.py  models.py  utils.py
app/backend/: __init__.py  accessors.py  chat.py  config.py  endpoints.py  models.py  utils.py
app/frontend/: app.py
data/: Landon Hotel Employee Manual_10_25_2023_LIL_34022.docx
tests/: conftest.py
tests/e2e/: test_backend_launch.py  test_endpoints.py
tests/testdata/: sample.docx
tests/unit/: test_chat.py  test_chat_endpoint.py
